[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mvlogics"
version = "0.9.0"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "Multi-valued logics."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["mathematical", "object-oriented"]
classifiers = ["Programming Language :: Python :: 3", "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/jonathandung/mvlogics"
Repository = "https://github.com/jonathandung/mvlogics.git"

[project.optional-dependencies]
dev = ["black", "flake8"]