[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "mvlogics"
version = "0.9.2"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
maintainers = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "Multi-valued logics."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
keywords = ["mathematical", "object-oriented", "feature-rich"]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Programming Language :: Python :: Implementation :: CPython", "Operating System :: OS Independent", "Development Status :: 4 - Beta", "Intended Audience :: Education", "Intended Audience :: Science/Research", "Topic :: Education", "Topic :: Software Development :: Version Control :: Git", "Natural Language :: English", "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/jonathandung/mvlogics"
Documentation = "https://mvlogics.readthedocs.io/en/stable/api/index.html"
Repository = "https://github.com/jonathandung/mvlogics.git"
Issues = "https://github.com/jonathandung/mvlogics/issues"
Download = "https://pypi.org/project/mvlogics/#files"
"Release Notes" = "https://github.com/jonathandung/mvlogics/releases"

[project.optional-dependencies]
dev = ["ruff>=0.15.10", "mypy>=1.20.0"]
docs = ["sphinx>=9.1.0", "sphinx_rtd_theme>=3.1.0", "sphinx-notfound-page>=1.1.0", "sphinx-autoapi>=3.8.0", "doc8>=2.0.0", "sphinx-lint>=1.0.2"]
pub = ["build>=1.4.2", "twine[keyring]>=6.2.0", "packaging>=26.0"]
all = ["mvlogics[dev,docs,pub]"]

[tool.setuptools]
packages = ["mvlogics"]

[tool.mypy]
python_version = "3.12"
files = ["mvlogics/**/*.pyi"]
follow_imports = "skip"
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_incomplete_stub = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_any_generics = true
extra_checks = true
exclude_gitignore = true

[tool.coverage.report]
exclude_lines = [".*# pragma: no (cover|branch)", "if __name__ == '__main__':", "raise NotImplementedError", "def __repr__\\(self.*\\):", "\\.\\.\\."]

[tool.ruff]
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist", "venv", "env", ".venv", ".env", "*.egg-info", ".eggs", ".mypy_cache", ".pytest_cache", "docs/source/conf.py"]

[tool.ruff.lint]
ignore = ["ANN401", "B904", "B905", "E226", "E227", "E228", "E252", "E261", "E301", "E302", "E305", "E306", "E401", "E501", "E701", "E702", "E741", "N812", "N818", "PLC0415", "PLC2401", "PLC2403", "PLC2701", "PLC2801", "PLW1514", "PYI021", "RET502", "RET503", "RUF012", "RUF067", "TRY003", "TRY300", "W292"]
select = ["A", "ARG", "ANN", "B", "BLE001", "COM819", "C4", "C901", "E", "EM103", "ERA001", "EXE", "F", "FIX002", "FLY002", "FURB", "G", "ISC", "LOG", "N804", "N805", "N81", "PERF", "PIE", "PGH004", "PL", "PYI", "RET", "RSE102", "RUF", "S", "SIM", "SLOT", "T100", "T201", "TRY", "UP", "W", "YTT"]
preview = true
typing-extensions = false

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["mcls"]

[tool.ruff.lint.per-file-ignores]
"mvlogics/**/*.py" = ["ANN", "PYI"]
"mvlogics/**/__init__.py" = ["F401", "PLR2004"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["__import__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__default_factory__"]

[tool.ruff.format]
quote-style = "single"

[tool.doc8]
max-line-length = 150
extension = ["rst"]