[build-system]
requires = ["uv_build>=0.11.22,<0.12"]
build-backend = "uv_build"

[project]
name = "mvlogics"
version = "0.9.5"
authors = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
maintainers = [{name = "Jonathan Dung", email = "jonathandung@yahoo.com"}]
description = "Multi-valued logics."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE", "AUTHORS.md"]
keywords = ["mathematical", "object-oriented", "logic", "propositional calculi"]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14", "Programming Language :: Python :: 3.15", "Programming Language :: Python :: Implementation :: CPython", "Operating System :: OS Independent", "Development Status :: 4 - Beta", "Intended Audience :: Education", "Intended Audience :: Science/Research", "Framework :: Sphinx", "Topic :: Education", "Topic :: Software Development :: Libraries :: Python Modules", "Topic :: Scientific/Engineering :: Mathematics", "Natural Language :: English", "Typing :: Typed"]

[project.urls]
Homepage = "https://github.com/jonathandung/mvlogics"
Documentation = "https://mvlogics.readthedocs.io/en/stable/api/index.html"
Repository = "https://github.com/jonathandung/mvlogics.git"
Issues = "https://github.com/jonathandung/mvlogics/issues"
Download = "https://pypi.org/project/mvlogics/#files"
"Release Notes" = "https://github.com/jonathandung/mvlogics/releases"

[project.optional-dependencies]
docs = ["Sphinx>=9.1.0", "furo>=2025.12.19", "sphinx-book-theme>=1.2.0", "sphinx-copybutton>=0.5.2", "sphinx-notfound-page>=1.1.0", "sphinx-autoapi>=3.8.0", "sphinx-lint>=1.0.2", "myst-parser>=5.1.0"]

[tool.coverage.report]
exclude_lines = [".*# pragma: no (cover|branch)", "if __name__ == '__main__':", "raise NotImplementedError", "def __repr__\\(self.*\\):", "\\.\\.\\."]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["E226", "E227", "E252", "E261", "E301", "E302", "E305", "E306", "E501", "E701", "E702", "E741", "PLC2401", "PLC2403", "PYI021", "RUF012", "RUF067", "TRY003"]
select = ["A", "ARG", "ANN", "B", "BLE001", "COM819", "C4", "C901", "E", "EM103", "ERA001", "EXE", "F", "FIX002", "FLY002", "FURB", "G", "ISC", "LOG", "N804", "N805", "N81", "PERF", "PIE", "PGH004", "PL", "PYI", "RET", "RSE102", "RUF", "S", "SIM", "SLOT", "T100", "T201", "TRY", "UP", "W", "YTT"]
preview = true
typing-extensions = false

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["mcls"]

[tool.ruff.lint.per-file-ignores]
"mvlogics/*.py" = ["ANN", "PYI"]
"mvlogics/__init__.py" = ["F401", "PLR2004"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["__import__"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.pylint]
allow-dunder-method-names = ["__default_factory__"]

[tool.ruff.format]
quote-style = "single"

[tool.ty.analysis]
respect-type-ignore-comments = false

[tool.ty.environment]
python-version = "3.12"
python-platform = "all"

[tool.ty.rules]
unused-ignore-comment = "error"

[tool.ty.src]
include = ["mvlogics"]
exclude = ["mvlogics/__init__.py"]

[tool.uv]
required-version = ">=0.11.22,<0.12"

[tool.uv.build-backend]
module-name = "mvlogics"
module-root = ""
